<resources>
    <string name="app_name">wanandroid</string>
    <string name="login">登录</string>
    <string name="favorite">我的收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于我们</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">搜索</string>
    <string name="home_page">首页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>

    <string name="error_tips">不妙！加载失败了ヽ(≧Д≦)ノ\n 告诉大佬一些可能的原因：\n1.不可直视的网络环境\n 2.服务器大哥的不定期抽风\n 3.WanAndroid眼冒金星拒绝服务喔~
    </string>
    <string name="reload">重新加载</string>
    <string name="title_activity_login">Sign in</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account_password_null_tint">用户名或密码不能为空</string>
    <string name="password_not_same">密码不匹配</string>

    <string name="http_error">网络异常</string>
    <string name="unKnown_error">未知错误</string>
    <string name="login_fail">登录失败ヽ(≧Д≦)ノ</string>
    <string name="register_fail">注册失败ヽ(≧Д≦)ノ</string>
    <string name="login_success">登录成功</string>
    <string name="auto_login_success">自动登录成功</string>

    <string name="hot_search">热搜</string>

    <string name="behavior_appbar_layout" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <string name="index_count">%1$d/%2$d</string>
    <string name="chapter_name">%1$s/%2$s</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failure">收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_failure">取消收藏失败</string>
    <string name="share">分享</string>
    <string name="open_it_with_browser">浏览器打开</string>
    <string name="share_text">%1$s【%2$s】链接：%3$s</string>
    <string name="version_name">当前版本号 v%s</string>
    <string name="no_more">没有更多了</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等

    ]]></string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="project_address">
        <![CDATA[GitHub：<br/><a href="https://github.com/jthou20121212/wanandroid">https://github.com/jthou20121212/wanandroid</a>]]></string>
    <string name="zhouzi">请作者吃肘子</string>
    <string name="zhouzi_buchi">作者不吃</string>
    <string name="version_info">版本：V%1$s</string>
    <string name="logout">退出登录</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="prompt_message">鲁迅说过，好好学习，天天向上。你要退出吗?</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="to_collect">去收藏</string>
    <string name="no_collect">没有收藏任何干货</string>
    <string name="test">测试</string>
    <string name="already_copy_to_clipboard">已复制到粘贴板</string>

    <string name="blank_three">&#160;&#160;&#160;</string>
    <string name="blank_one">&#160;</string>

    <string name="email_address">jthou20121212@gmail.com</string>
    <string name="email_uri_string">mailto:jthou20121212@gmail.com</string>
    <string name="email_title">咱们要好好谈一谈了</string>
    <string name="check_update_text">这是假的，哦豁活嚯嚯嚯嚯嚯嚯嚯</string>

    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="walk_you">请输入关键词搜索</string>

</resources>
