<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group">

        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/login"
            android:title="@string/login" />

        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />

        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_drawer_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/about"
            android:title="@string/about" />

        <item
            android:visible="false"
            android:id="@+id/menu_logout"
            android:icon="@drawable/about"
            android:title="@string/logout" />

    </group>

</menu>