<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res">

    <item
            android:id="@+id/tab_home_page"
            android:enabled="true"
            android:icon="@drawable/ic_main"
            android:title="@string/home_page"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/tab_knowledge_hierarchy"
            android:enabled="true"
            android:icon="@drawable/ic_knowledge_hierarchy"
            android:title="@string/knowledge_hierarchy"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/tab_navigation"
            android:enabled="true"
            android:icon="@drawable/ic_navigation"
            android:title="@string/navigation"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/tab_project"
            android:enabled="true"
            android:icon="@drawable/ic_project"
            android:title="@string/project"
            app:showAsAction="ifRoom" />

</menu>