<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <FrameLayout
            android:background="@color/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

        <androidx.appcompat.widget.SearchView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:queryHint="@string/walk_you"
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="65dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="@string/hot_search"
                    android:textColor="@color/light_deep_red"
                    android:textSize="@dimen/sp_16"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24">

                <TextView
                        android:id="@+id/search_history_clear_all_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_all"
                        android:textColor="@color/delete_text"
                        android:drawableStart="@drawable/ic_clear_all_gone"
                        android:drawablePadding="@dimen/dp_6"
                        android:layout_alignParentEnd="true" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_search"
                        android:textColor="@color/colorPrimaryOverlay"
                        android:textSize="@dimen/sp_16"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/search_history_clear_all_tv" />

                <androidx.recyclerview.widget.RecyclerView
                        android:visibility="gone"
                        android:id="@+id/recyclerView_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</layout>